做完了Application与UIUtils类的编写

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/common_top"/>
     <TextView
         android:textSize="30sp"
         android:textColor="#f00"
