自定义ScrollView的伸缩回弹

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,11 +3,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/common_top"/>
-    <TextView
-        android:textSize="30sp"
-        android:textColor="#f00"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="首页"/>
+    <include layout="@layout/common_top" />
+
+    <ysg.gdcp.cn.p2pfinance.ui.MyScrollView
+        android:id="@+id/myscrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="首页"
+            android:textColor="#f00"
+            android:textSize="30sp" />
+
+    </ysg.gdcp.cn.p2pfinance.ui.MyScrollView>
 </LinearLayout>
