--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/vp_barner"
                     android:layout_width="match_parent"
+                    android:background="@mipmap/ys"
                     android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
                 <com.viewpagerindicator.CirclePageIndicator
