--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="product_detail_common">#666666</color>
     <color name="divider_line">#e1e1e1</color>
     <color name="product_red_common">#e84768</color>
+    <color name="my_title_bg">#28baed</color>
+    <color name="white">#ffffff</color>
 </resources>
